# ferrokinesis

./: .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  ferrokinesis.example.toml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  compatibility-matrix.md
.github/actions/setup-rust-toolchain/: action.yml
.github/scripts/: render-compatibility-matrix.py  test_render_compatibility_matrix.py
.github/workflows/: build.yml  ci.yml  compatibility-matrix.yml  conformance.yml  pages.yml  release-plz.yml  release.yml  stress.yml
benches/: kinesis_api.rs
crates/ferro-cli/: Cargo.toml
crates/ferro-cli/src/: client.rs  main.rs
crates/ferro-cli/tests/: cli.rs  common.rs
crates/ferrokinesis-core/: Cargo.toml
crates/ferrokinesis-core/src/: capture.rs  constants.rs  error.rs  lib.rs  operation.rs  sequence.rs  shard_iterator.rs  types.rs  util.rs
crates/ferrokinesis-core/src/validation/: mod.rs  rules.rs
crates/ferrokinesis-wasm/: Cargo.toml
crates/ferrokinesis-wasm/src/: lib.rs
crates/ferrokinesis-wasm/tests/: phase1.rs
demo/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
demo/scripts/: build-wasm.mjs
demo/src/: main.ts  style.css
demo/tests/: demo.spec.ts
examples/: README.md
examples/aws-cli/: quickstart-tls.sh  quickstart.sh
examples/go/: go.mod  quickstart.go  quickstart_tls.go
examples/java/: pom.xml
examples/java/src/main/java/example/: Quickstart.java  QuickstartTls.java
examples/node/: package-lock.json  package.json  quickstart-tls.mjs  quickstart.mjs
examples/python/: quickstart.py  quickstart_tls.py  requirements.txt
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
scripts/: bench-compare.sh  capture-aws-golden.sh
scripts/ci/: compare-memory-smoke.py  memory-harness.sh
src/: capture.rs  chaos.rs  config.rs  constants.rs  error.rs  event_stream.rs  health.rs  lib.rs  main.rs  metrics.rs  mirror.rs  persistence.rs  retention.rs  runtime.rs  sequence.rs  server.rs  shard_iterator.rs  store.rs  types.rs  util.rs
src/actions/: add_tags_to_stream.rs  create_stream.rs  decrease_stream_retention_period.rs  delete_resource_policy.rs  delete_stream.rs  deregister_stream_consumer.rs  describe_account_settings.rs  describe_limits.rs  describe_stream.rs  describe_stream_consumer.rs  describe_stream_summary.rs  disable_enhanced_monitoring.rs  enable_enhanced_monitoring.rs  get_records.rs  get_resource_policy.rs  get_shard_iterator.rs  increase_stream_retention_period.rs  list_shards.rs  list_stream_consumers.rs  list_streams.rs  list_tags_for_resource.rs  list_tags_for_stream.rs  merge_shards.rs  mod.rs  put_record.rs  put_records.rs  put_resource_policy.rs  register_stream_consumer.rs  remove_tags_from_stream.rs  split_shard.rs  start_stream_encryption.rs  stop_stream_encryption.rs  subscribe_to_shard.rs  tag_resource.rs  untag_resource.rs  update_account_settings.rs  update_max_record_size.rs  update_shard_count.rs  update_stream_mode.rs  update_stream_warm_throughput.rs
src/checkpoint/: mod.rs
src/validation/: mod.rs  rules.rs
tests/: arn_validation.rs  aws_conformance.rs  capture_replay.rs  cbor_json_equivalence.rs  chaos.rs  checkpoint.rs  concurrent_stress.rs  configurable_account_region.rs  connection.rs  consumers.rs  coverage_extra.rs  create_stream.rs  delete_stream.rs  describe_stream.rs  describe_stream_summary.rs  durable_state.rs  encryption.rs  enhanced_monitoring.rs  error_conformance.rs  event_stream.rs  event_stream_extra.rs  get_records.rs  get_records_expired.rs  get_records_extra.rs  get_shard_iterator.rs  health.rs  health_check_cli.rs  list_shards.rs  list_streams.rs  mirror.rs  more_coverage.rs  observability_runtime.rs  prop_batch_operations.rs  prop_cbor_json_equivalence.rs  prop_data_roundtrip.rs  prop_error_batch_limits.rs  prop_error_data_blob.rs  prop_error_duplicate_stream.rs  prop_error_expired_iterator.rs  prop_error_explicit_hash_key.rs  (+27 more)
tests/common/: mod.rs
tests/conformance/: wait-for-server.sh
tests/conformance/go-sdk-v2/: conformance_test.go  go.mod  go.sum
tests/conformance/java-kcl-v1/: pom.xml
tests/conformance/java-kcl-v1/src/test/java/ferrokinesis/conformance/: KclV1IntegrationTest.java  TestRecordProcessor.java  TestRecordProcessorFactory.java
tests/conformance/java-kcl-v2/: pom.xml
tests/conformance/java-kcl-v2/src/test/java/ferrokinesis/conformance/: KclV2IntegrationTest.java  TestShardRecordProcessor.java  TestShardRecordProcessorFactory.java
tests/conformance/java-sdk-v1/: pom.xml
tests/conformance/java-sdk-v1/src/test/java/ferrokinesis/conformance/: KinesisV1ConformanceTest.java
tests/conformance/java-sdk-v2/: pom.xml
tests/conformance/java-sdk-v2/src/test/java/ferrokinesis/conformance/: KinesisV2ConformanceTest.java
tests/conformance/node-sdk-v3/: conformance.test.ts  package-lock.json  package.json
tests/conformance/python-boto3/: requirements.txt  test_conformance.py
tests/golden/error/: create_stream_already_exists.json  describe_stream_not_found.json  get_records_expired_iterator.json  get_shard_iterator_invalid_shard.json  put_record_stream_not_found.json
tests/golden/happy/: create_stream.json  describe_stream.json  describe_stream_summary.json  get_records.json  get_shard_iterator_after_sequence_number.json  get_shard_iterator_at_sequence_number.json  get_shard_iterator_at_timestamp.json  get_shard_iterator_latest.json  get_shard_iterator_trim_horizon.json  list_shards.json  list_streams.json  put_record.json  put_records.json
