[package]
name = "ferrokinesis"
version = "0.2.1"
edition = "2024"
description = "A local AWS Kinesis mock server for testing, written in Rust"
license = "MIT"

[[bin]]
name = "ferrokinesis"
path = "src/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["loadtest"]

[features]
loadtest = ["dep:goose"]
tls = ["dep:axum-server", "dep:rcgen", "dep:rustls"]

[dependencies]
aes = "0.8"
async-stream = "0.3"
aws-smithy-eventstream = "0.60"
aws-smithy-types = "1.4"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
base64 = "0.22"
bytes = "1"
cbc = "0.1"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }
goose = { version = "0.18", optional = true }
md-5 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
postcard = { version = "1", features = ["alloc"] }
rand = "0.9"
rcgen = { version = "0.14", optional = true }
redb = "3.1"
rustls = { version = "0.23", optional = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
aes = "0.8"
aws-credential-types = { version = "1", features = ["test-util"] }
aws-sdk-kinesis = "1"
base64 = "0.22"
cbc = "0.1"
ciborium = "0.2"
criterion = { version = "0.5", features = ["async_tokio"] }
num-bigint = "0.4"
proptest = "1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[[bench]]
name = "kinesis_api"
harness = false
