[workspace]
members = [".", "crates/ferrokinesis-core"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"

[package]
name = "ferrokinesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A local AWS Kinesis mock server for testing, written in Rust"
license.workspace = true

[[bin]]
name = "ferrokinesis"
path = "src/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["loadtest"]

[features]
default = ["access-log"]
access-log = ["dep:tower-http"]
mirror = ["dep:backon", "dep:reqwest", "dep:aws-config", "dep:aws-credential-types", "dep:aws-sigv4", "dep:aws-smithy-runtime-api", "dep:url"]
loadtest = ["dep:goose"]
replay = ["dep:reqwest"]
tls = ["dep:axum-server", "dep:rcgen", "dep:rustls"]

[dependencies]
ferrokinesis-core = { path = "crates/ferrokinesis-core", version = "0.4.0" }
async-stream = "0.3"
backon = { version = "1.6", default-features = false, features = ["tokio-sleep"], optional = true }
aws-config = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process"] }
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-eventstream = "0.60"
aws-smithy-runtime-api = { version = "1", features = ["client"], optional = true }
aws-smithy-types = "1.4"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
base64 = "0.22"
bytes = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }
goose = { version = "0.18", optional = true }
md-5 = { version = "0.10", default-features = false }
num-bigint = "0.4"
num-traits = "0.2"
postcard = { version = "1", default-features = false, features = ["alloc"] }
rand = "0.9"
rcgen = { version = "0.14", optional = true }
redb = "3.1"
reqwest = { version = "0.12", features = ["json"], optional = true }
regex = "1"
rustls = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
aes = "0.8"
reqwest = { version = "0.12", features = ["json"] }
aws-credential-types = { version = "1", features = ["test-util"] }
aws-sdk-kinesis = "1"
base64 = "0.22"
cbc = "0.1"
ciborium = "0.2"
criterion = { version = "0.5", features = ["async_tokio"] }
num-bigint = "0.4"
proptest = "1"
tempfile = "3"

[[bench]]
name = "kinesis_api"
harness = false
