[workspace]
members = [".", "crates/ferrokinesis-core", "crates/ferrokinesis-wasm"]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"

[package]
name = "ferrokinesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A local AWS Kinesis mock server for testing, written in Rust"
license.workspace = true

[[bin]]
name = "ferrokinesis"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["loadtest"]

[[bin]]
name = "ferrokinesis-wasi"
path = "src/bin/wasi.rs"
required-features = ["wasi"]

[features]
default = ["server", "access-log"]
rt = ["tokio/rt", "tokio/time", "tokio/macros"]
server = [
    "rt",
    "dep:clap",
    "dep:toml",
    "dep:tracing-subscriber",
    "axum/http1",
    "axum/tokio",
    "tokio/fs",
    "tokio/io-util",
    "tokio/net",
    "tokio/process",
    "tokio/rt-multi-thread",
    "tokio/signal",
]
access-log = ["dep:tower-http"]
wasi = ["rt", "dep:httparse", "dep:tower", "dep:tracing-subscriber"]
wasm = [
    "dep:getrandom",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "getrandom/wasm_js",
    "uuid/js",
]
mirror = [
    "server",
    "dep:backon",
    "dep:reqwest",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
    "dep:url",
]
mirror-aws-config = ["mirror", "dep:aws-config"]
loadtest = ["rt", "dep:goose", "tokio/rt-multi-thread"]
replay = ["server", "dep:reqwest"]
tls = ["server", "dep:axum-server", "dep:rcgen", "dep:rustls"]

[dependencies]
ferrokinesis-core = { path = "crates/ferrokinesis-core", version = "0.5.0" }
backon = { version = "1.6", default-features = false, features = ["tokio-sleep"], optional = true }
aws-config = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process"] }
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", features = ["client"], optional = true }
axum = { version = "0.8", default-features = false, features = ["json"] }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
base64 = "0.22"
bytes = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"], optional = true }
getrandom = { version = "0.3", default-features = false, optional = true }
goose = { version = "0.18", optional = true }
httparse = { version = "1", optional = true }
js-sys = { version = "0.3", optional = true }
md-5 = { version = "0.10", default-features = false }
num-bigint = "0.4"
num-traits = "0.2"
postcard = { version = "1", default-features = false, features = ["alloc"] }
rand = "0.9"
rcgen = { version = "0.14", optional = true }
dashmap = "6"
reqwest = { version = "0.12", features = ["json"], optional = true }
regex = "1"
rustls = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", default-features = false, features = ["sync"] }
toml = { version = "0.8", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-stream = "0.3"
aws-smithy-eventstream = "0.60"
aws-smithy-types = "1.4"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time", "macros"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
aes = "0.8"
reqwest = { version = "0.12", features = ["json"] }
aws-credential-types = { version = "1", features = ["test-util"] }
aws-sdk-kinesis = "1"
base64 = "0.22"
cbc = "0.1"
ciborium = "0.2"
criterion = { version = "0.5", features = ["async_tokio"] }
num-bigint = "0.4"
proptest = "1"
tempfile = "3"

[[bench]]
name = "kinesis_api"
harness = false
