[package]
name = "ferrokinesis-core"
version.workspace = true
edition.workspace = true
description = "Core protocol logic for the ferrokinesis AWS Kinesis emulator"
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "regex/std", "regex/perf", "base64/std", "num-bigint/std"]

[dependencies]
aes = { version = "0.8", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
cbc = { version = "0.1", default-features = false, features = ["alloc", "block-padding"] }
md-5 = { version = "0.10", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
regex = { version = "1", default-features = false, features = ["unicode"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.18", default-features = false }
