[package]
name = "ferrokinesis-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM wrapper for the ferrokinesis in-process Kinesis emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", default-features = false }
console_error_panic_hook = "0.1"
ferrokinesis = { path = "../..", default-features = false, features = ["wasm"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tower = { version = "0.5", features = ["util"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
js-sys = "0.3"
num-bigint = "0.4"
serde_json = "1"
wasm-bindgen-test = "0.3"
